# arise

./: .gitignore  README.md
api/: Cargo.toml  Config.toml
api/src/: config.rs  db.rs  lib.rs  main.rs
api/src/enums/: ip_protocol.rs  mod.rs
api/src/models/: command_execution.rs  firewall_log.rs  firewall_rule.rs  mod.rs
api/src/services/: command_execution.rs  firewall_log.rs  firewall_rule.rs  mod.rs  ping.rs
api/storage/: random-exec-command.py  simulate-exec-command.py
ebpf-firewall/: Cargo.toml  Config.toml  README.md
ebpf-firewall/ebpf-firewall/: Cargo.toml  build.rs
ebpf-firewall/ebpf-firewall-common/: Cargo.toml
ebpf-firewall/ebpf-firewall-ebpf/: Cargo.toml
ebpf-firewall/ebpf-firewall-ebpf/src/: main.rs
ebpf-firewall/ebpf-firewall/src/: api.rs  config.rs  lib.rs  log.rs  main.rs  protocol.rs  rule.rs
ebpf-firewall/ebpf-firewall/src/maps/: firewall_cidrs.rs  firewall_log.rs  firewall_rules.rs  mod.rs
ebpf-tracepoint/: Cargo.toml  Config.toml  README.md
ebpf-tracepoint/ebpf-tracepoint/: Cargo.toml  build.rs
ebpf-tracepoint/ebpf-tracepoint-common/: Cargo.toml
ebpf-tracepoint/ebpf-tracepoint-common/src/: lib.rs
ebpf-tracepoint/ebpf-tracepoint-ebpf/: Cargo.toml
ebpf-tracepoint/ebpf-tracepoint-ebpf/src/: main.rs
ebpf-tracepoint/ebpf-tracepoint/src/: lib.rs  main.rs
ebpf-tracepoint/storage/: log.txt
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.vue  config.json  style.css
web/src/assets/: echarts-theme.json
web/src/classes/: CommandExecution.ts  HttpClient.ts
web/src/components/: CommandExecutionDashboard.vue  HelloWorld.vue
web/src/interfaces/: CommandExecutionInterfaces.ts
web/src/types/: RecordId.ts
