[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
surrealdb = "2.2.2"
tokio = "1.44.2"
toml = "0.8.20"
