[package]
name = "ebpf-firewall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
ebpf-firewall-common = { path = "../ebpf-firewall-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ebpf-firewall"
path = "src/main.rs"
