[package]
name = "ebpf-firewall"
version = "0.1.0"
edition = "2021"

license.workspace = true

[dependencies]
ebpf-firewall-common = { path = "../ebpf-firewall-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
bytes = { workspace = true}
bytemuck = { workspace = true}
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }
network-types = "0.0.8"
serde = { version="1.0.219", features=["derive"]}
reqwest = { version="0.12.15", features=["json"]}
toml = "0.8.22"
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
ebpf-firewall-ebpf = { path = "../ebpf-firewall-ebpf" }

[[bin]]
name = "ebpf-firewall"
path = "src/main.rs"
